--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,11 @@ html, body {
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
+        transition-duration: 0.5s;
+        opacity: 0;
+    }
+    .carousel-gallery .card.show {
+        opacity: 1;
     }
     .carousel-gallery .card + .card {
         margin-left: 30px;
@@ -467,10 +472,7 @@ html, body {
     }
     .carousel-container .carousel-gallery {
         width: 95%;
-    }
-    .carousel-gallery .card {
-        transition-duration: 0.5s;
-    }
+    }    
     .carousel-gallery .card:hover {
         cursor: pointer;
         transform: scale(1.2);
